// Vitest Snapshot v1

exports[`Loading > Loading barVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-loading t-loading--bar"
    style=""
  >
    <!--v-if-->
  </div>
  <button
    aria-disabled="false"
    class="t-button t-size-m t-button--outline t-button--default t-button--shape-rectangle"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      页面进度条加载
      
    </span>
  </button>
  
</div>
`;

exports[`Loading > Loading baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-loading"
    data-v-4a68c35c=""
    style=""
  >
    
    
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      style="animation-duration: 800ms;"
      version="1.1"
      viewBox="0 0 14 14"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="1"
        y="1"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
    
    <!--v-if-->
    <!---->
    
  </div>
  <div
    class="t-loading"
    data-v-4a68c35c=""
    style=""
  >
    
    
    <span
      class="t-loading__spinner"
      style="animation-duration: 800ms;"
    >
      
      <i
        class="t-loading__spinner--line t-loading__spinner--line-1"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-2"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-3"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-4"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-5"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-6"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-7"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-8"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-9"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-10"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-11"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-12"
      />
      
    </span>
    
    <!--v-if-->
    <!---->
    
  </div>
  <div
    class="t-loading"
    data-v-4a68c35c=""
    style=""
  >
    
    
    <div
      class="t-loading__dots"
      style="animation-duration: 800ms;"
    />
    
    <!--v-if-->
    <!---->
    
  </div>
  
</div>
`;

exports[`Loading > Loading delayVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="switch-wrap"
    data-v-559e6688=""
  >
    <span
      class="t-switch"
      data-v-559e6688=""
    >
      <!--v-if-->
      <span
        class="t-switch__node"
        style=""
      />
    </span>
    <div
      data-v-559e6688=""
    >
      请求结束，隐藏loading
    </div>
  </div>
  <div
    class="t-loading"
    data-v-559e6688=""
    style=""
  >
    
    <!--v-if-->
    <!--v-if-->
    <!---->
    
  </div>
  
</div>
`;

exports[`Loading > Loading horzVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-loading"
    data-v-c48bb9cc=""
    style=""
  >
    
    
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      style="animation-duration: 800ms;"
      version="1.1"
      viewBox="0 0 14 14"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="1"
        y="1"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
    
    <span
      class="t-loading__text"
    >
      加载中...
    </span>
    <!---->
    
  </div>
  <div
    class="t-loading"
    data-v-c48bb9cc=""
    style=""
  >
    
    
    <span
      class="t-loading__spinner"
      style="animation-duration: 800ms;"
    >
      
      <i
        class="t-loading__spinner--line t-loading__spinner--line-1"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-2"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-3"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-4"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-5"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-6"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-7"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-8"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-9"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-10"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-11"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-12"
      />
      
    </span>
    
    <span
      class="t-loading__text"
    >
      加载中...
    </span>
    <!---->
    
  </div>
  
</div>
`;

exports[`Loading > Loading mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-448d2bed=""
>
  <h1
    class="title"
    data-v-448d2bed=""
  >
    Loading 加载中
  </h1>
  <p
    class="summary"
    data-v-448d2bed=""
  >
    用于表示页面或操作的加载状态，给予用户反馈的同时减缓等待的焦虑感，由一个或一组反馈动效组成。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-448d2bed=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      纯icon
    </p>
    
    <div
      class="loading-demo first"
      data-v-448d2bed=""
    >
      
      <div
        class="t-loading"
        data-v-4a68c35c=""
        style=""
      >
        
        
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          style="animation-duration: 800ms;"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
        
        <!--v-if-->
        <!---->
        
      </div>
      <div
        class="t-loading"
        data-v-4a68c35c=""
        style=""
      >
        
        
        <span
          class="t-loading__spinner"
          style="animation-duration: 800ms;"
        >
          
          <i
            class="t-loading__spinner--line t-loading__spinner--line-1"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-2"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-3"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-4"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-5"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-6"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-7"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-8"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-9"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-10"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-11"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-12"
          />
          
        </span>
        
        <!--v-if-->
        <!---->
        
      </div>
      <div
        class="t-loading"
        data-v-4a68c35c=""
        style=""
      >
        
        
        <div
          class="t-loading__dots"
          style="animation-duration: 800ms;"
        />
        
        <!--v-if-->
        <!---->
        
      </div>
      
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-448d2bed=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      icon加文字横向
    </p>
    
    <div
      class="loading-demo"
      data-v-448d2bed=""
    >
      
      <div
        class="t-loading"
        data-v-c48bb9cc=""
        style=""
      >
        
        
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          style="animation-duration: 800ms;"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
        
        <span
          class="t-loading__text"
        >
          加载中...
        </span>
        <!---->
        
      </div>
      <div
        class="t-loading"
        data-v-c48bb9cc=""
        style=""
      >
        
        
        <span
          class="t-loading__spinner"
          style="animation-duration: 800ms;"
        >
          
          <i
            class="t-loading__spinner--line t-loading__spinner--line-1"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-2"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-3"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-4"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-5"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-6"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-7"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-8"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-9"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-10"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-11"
          />
          <i
            class="t-loading__spinner--line t-loading__spinner--line-12"
          />
          
        </span>
        
        <span
          class="t-loading__text"
        >
          加载中...
        </span>
        <!---->
        
      </div>
      
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-448d2bed=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      icon加文字竖向
    </p>
    
    <div
      class="loading-demo"
      data-v-448d2bed=""
    >
      <div
        data-v-448d2bed=""
      >
        <div
          class="t-loading t-loading--vertical"
          style=""
        >
          
          
          <svg
            class="t-loading__gradient t-icon-loading"
            height="1em"
            style="animation-duration: 800ms;"
            version="1.1"
            viewBox="0 0 14 14"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <foreignobject
              height="12"
              width="12"
              x="1"
              y="1"
            >
              <div
                class="t-loading__gradient-conic"
              />
            </foreignobject>
          </svg>
          
          <span
            class="t-loading__text"
          >
            加载中
          </span>
          <!---->
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-448d2bed=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      纯文字
    </p>
    
    <div
      class="loading-demo"
      data-v-448d2bed=""
    >
      <div
        class="pure-text-demo"
        data-v-448d2bed=""
        data-v-4d8f0c32=""
      >
        <div
          class="t-loading"
          data-v-4d8f0c32=""
          style=""
        >
          
          <!--v-if-->
          <span
            class="t-loading__text t-loading__text--only"
          >
            加载中...
          </span>
          <!---->
          
        </div>
        <div
          class="t-loading"
          data-v-4d8f0c32=""
          style=""
        >
          
          
          <!--v-if-->
          
          <span
            class="t-loading__text t-loading__text--error t-loading__text--only"
          >
            加载失败
          </span>
          <!---->
          
        </div>
        <div
          class="t-loading"
          data-v-4d8f0c32=""
          style=""
        >
          
          <!--v-if-->
          <!--v-if-->
          
          <div
            class="custom-error"
            data-v-4d8f0c32=""
          >
             加载失败 
            <span
              data-v-4d8f0c32=""
            >
              刷新
            </span>
          </div>
          
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-448d2bed=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      进度条加载
    </p>
    
    <div
      class="loading-demo"
      data-v-448d2bed=""
    >
      
      <div
        class="t-loading t-loading--bar"
        style=""
      >
        <!--v-if-->
      </div>
      <button
        aria-disabled="false"
        class="t-button t-size-m t-button--outline t-button--default t-button--shape-rectangle"
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          页面进度条加载
          
        </span>
      </button>
      
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-448d2bed=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      02 状态
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      如果加载状态在延迟内结束，则不显示
    </p>
    
    <div
      class="loading-demo loading-demo--column"
      data-v-448d2bed=""
    >
      
      <div
        class="switch-wrap"
        data-v-559e6688=""
      >
        <span
          class="t-switch"
          data-v-559e6688=""
        >
          <!--v-if-->
          <span
            class="t-switch__node"
            style=""
          />
        </span>
        <div
          data-v-559e6688=""
        >
          请求结束，隐藏loading
        </div>
      </div>
      <div
        class="t-loading"
        data-v-559e6688=""
        style=""
      >
        
        <!--v-if-->
        <!--v-if-->
        <!---->
        
      </div>
      
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-448d2bed=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      03 加载速度
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      加载速度可配置，加载一周的时间单位（毫秒）
    </p>
    
    <div
      class="loading-demo loading-demo--column"
      data-v-448d2bed=""
    >
      
      <div
        class="t-loading"
        data-v-0fadab4c=""
        style=""
      >
        
        
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          style="animation-duration: 300ms;"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
        
        <span
          class="t-loading__text"
        >
          加载中...
        </span>
        <!---->
        
      </div>
      <div
        class="slider-wrap"
        data-v-0fadab4c=""
      >
        <span
          data-v-0fadab4c=""
          style="width: 120px; margin-right: 10px;"
        >
           速度调整 
        </span>
        <div
          class="t-slider-wrap t-is-value"
          data-v-0fadab4c=""
        >
          <div
            class="t-slider-wrap__value--left"
          >
            0
          </div>
          <div
            class="t-slider"
          >
            <!-- 总长度 -->
            <div
              class="t-slider__bar"
            />
            <!-- 滑块长度 -->
            <div
              class="t-slider__track"
              style="width: 37.5%;"
            />
            <!-- 滑块操作 -->
            
            <div
              class="t-slider__handle"
              style="left: 37.5%;"
            />
            
            <!-- 刻度内容 -->
            <div
              class="t-slider__mark"
            >
              
              
            </div>
          </div>
          <!--v-if-->
          <div
            class="t-slider-wrap__value"
          >
            800
          </div>
        </div>
      </div>
      
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-448d2bed=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      04 规格
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      支持自定义加载规格
    </p>
    
    <div
      class="loading-demo loading-demo--column"
      data-v-448d2bed=""
    >
      <div
        data-v-38fef6e8=""
        data-v-448d2bed=""
      >
        <div
          class="t-loading t-size-s"
          data-v-38fef6e8=""
          style=""
        >
          
          
          <svg
            class="t-loading__gradient t-icon-loading"
            height="1em"
            style="animation-duration: 800ms;"
            version="1.1"
            viewBox="0 0 14 14"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <foreignobject
              height="12"
              width="12"
              x="1"
              y="1"
            >
              <div
                class="t-loading__gradient-conic"
              />
            </foreignobject>
          </svg>
          
          <span
            class="t-loading__text"
          >
            加载中（小）...
          </span>
          <!---->
          
        </div>
        <div
          class="t-loading t-size-m"
          data-v-38fef6e8=""
          style=""
        >
          
          
          <svg
            class="t-loading__gradient t-icon-loading"
            height="1em"
            style="animation-duration: 800ms;"
            version="1.1"
            viewBox="0 0 14 14"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <foreignobject
              height="12"
              width="12"
              x="1"
              y="1"
            >
              <div
                class="t-loading__gradient-conic"
              />
            </foreignobject>
          </svg>
          
          <span
            class="t-loading__text"
          >
            加载中（中）...
          </span>
          <!---->
          
        </div>
        <div
          class="t-loading t-size-l"
          data-v-38fef6e8=""
          style=""
        >
          
          
          <svg
            class="t-loading__gradient t-icon-loading"
            height="1em"
            style="animation-duration: 800ms;"
            version="1.1"
            viewBox="0 0 14 14"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <foreignobject
              height="12"
              width="12"
              x="1"
              y="1"
            >
              <div
                class="t-loading__gradient-conic"
              />
            </foreignobject>
          </svg>
          
          <span
            class="t-loading__text"
          >
            加载中（大）...
          </span>
          <!---->
          
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Loading > Loading pureTextVue demo works fine 1`] = `
<div
  class="pure-text-demo"
  data-v-4d8f0c32=""
>
  <div
    class="t-loading"
    data-v-4d8f0c32=""
    style=""
  >
    
    <!--v-if-->
    <span
      class="t-loading__text t-loading__text--only"
    >
      加载中...
    </span>
    <!---->
    
  </div>
  <div
    class="t-loading"
    data-v-4d8f0c32=""
    style=""
  >
    
    
    <!--v-if-->
    
    <span
      class="t-loading__text t-loading__text--error t-loading__text--only"
    >
      加载失败
    </span>
    <!---->
    
  </div>
  <div
    class="t-loading"
    data-v-4d8f0c32=""
    style=""
  >
    
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="custom-error"
      data-v-4d8f0c32=""
    >
       加载失败 
      <span
        data-v-4d8f0c32=""
      >
        刷新
      </span>
    </div>
    
    
  </div>
</div>
`;

exports[`Loading > Loading sizeVue demo works fine 1`] = `
<div
  data-v-38fef6e8=""
>
  <div
    class="t-loading t-size-s"
    data-v-38fef6e8=""
    style=""
  >
    
    
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      style="animation-duration: 800ms;"
      version="1.1"
      viewBox="0 0 14 14"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="1"
        y="1"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
    
    <span
      class="t-loading__text"
    >
      加载中（小）...
    </span>
    <!---->
    
  </div>
  <div
    class="t-loading t-size-m"
    data-v-38fef6e8=""
    style=""
  >
    
    
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      style="animation-duration: 800ms;"
      version="1.1"
      viewBox="0 0 14 14"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="1"
        y="1"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
    
    <span
      class="t-loading__text"
    >
      加载中（中）...
    </span>
    <!---->
    
  </div>
  <div
    class="t-loading t-size-l"
    data-v-38fef6e8=""
    style=""
  >
    
    
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      style="animation-duration: 800ms;"
      version="1.1"
      viewBox="0 0 14 14"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="1"
        y="1"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
    
    <span
      class="t-loading__text"
    >
      加载中（大）...
    </span>
    <!---->
    
  </div>
</div>
`;

exports[`Loading > Loading speedVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-loading"
    data-v-0fadab4c=""
    style=""
  >
    
    
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      style="animation-duration: 300ms;"
      version="1.1"
      viewBox="0 0 14 14"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="1"
        y="1"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
    
    <span
      class="t-loading__text"
    >
      加载中...
    </span>
    <!---->
    
  </div>
  <div
    class="slider-wrap"
    data-v-0fadab4c=""
  >
    <span
      data-v-0fadab4c=""
      style="width: 120px; margin-right: 10px;"
    >
       速度调整 
    </span>
    <div
      class="t-slider-wrap t-is-value"
      data-v-0fadab4c=""
    >
      <div
        class="t-slider-wrap__value--left"
      >
        0
      </div>
      <div
        class="t-slider"
      >
        <!-- 总长度 -->
        <div
          class="t-slider__bar"
        />
        <!-- 滑块长度 -->
        <div
          class="t-slider__track"
          style="width: 37.5%;"
        />
        <!-- 滑块操作 -->
        
        <div
          class="t-slider__handle"
          style="left: 37.5%;"
        />
        
        <!-- 刻度内容 -->
        <div
          class="t-slider__mark"
        >
          
          
        </div>
      </div>
      <!--v-if-->
      <div
        class="t-slider-wrap__value"
      >
        800
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Loading > Loading vertVue demo works fine 1`] = `
<div>
  <div
    class="t-loading t-loading--vertical"
    style=""
  >
    
    
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      style="animation-duration: 800ms;"
      version="1.1"
      viewBox="0 0 14 14"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="1"
        y="1"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
    
    <span
      class="t-loading__text"
    >
      加载中
    </span>
    <!---->
    
  </div>
</div>
`;
